snapshot before the major change: command queue
